RESOLVED FIXED 78538
CSS 2.1 failure: eof-003.htm fails
https://bugs.webkit.org/show_bug.cgi?id=78538
Summary CSS 2.1 failure: eof-003.htm fails
Robert Hogan
Reported 2012-02-13 14:16:47 PST
The new CSS lexer can handle this I'm sure.
Attachments
Patch (4.76 KB, patch)
2012-02-13 14:44 PST, Robert Hogan
no flags
Patch (4.75 KB, patch)
2012-02-13 15:08 PST, Robert Hogan
no flags
Patch (16.06 KB, patch)
2012-02-14 14:27 PST, Robert Hogan
koivisto: review+
Robert Hogan
Comment 1 2012-02-13 14:17:05 PST
*** Bug 34723 has been marked as a duplicate of this bug. ***
Robert Hogan
Comment 2 2012-02-13 14:20:35 PST
*** Bug 34067 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 3 2012-02-13 14:28:57 PST
Why did you reverse dupe to the newer bug? It's generally advisable to keep older one open.
Robert Hogan
Comment 4 2012-02-13 14:44:00 PST
Robert Hogan
Comment 5 2012-02-13 14:46:17 PST
(In reply to comment #3) > Why did you reverse dupe to the newer bug? It's generally advisable to keep older one open. The larger of the two is invalid now as the lexer has been rewritten so felt it would be easier to navigate a clean copy for this patch review. But yes, fair point.
Robert Hogan
Comment 6 2012-02-13 15:08:29 PST
Robert Hogan
Comment 7 2012-02-14 14:27:04 PST
Robert Hogan
Comment 8 2012-02-20 12:56:05 PST
Hi Zoltan, Could you take a look when you get the chance?
Robert Hogan
Comment 9 2012-03-08 22:50:41 PST
Hi Antti/Oliver, Could either of you take a look at this one please? Thanks, Robert
Antti Koivisto
Comment 10 2012-03-17 04:10:52 PDT
Comment on attachment 127046 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=127046&action=review r=me > Source/WebCore/ChangeLog:13 > + > + CSS 2.1 failure: eof-003.htm fails > + https://bugs.webkit.org/show_bug.cgi?id=78538 > + > + Reviewed by NOBODY (OOPS!). > + > + Tests: css2.1/20110323/eof-001.htm > + css2.1/20110323/eof-003.htm > + css2.1/20110323/eof-004.htm > + css2.1/20110323/eof-005.htm > + css2.1/20110323/eof-006.htm > + css2.1/20110323/eof-007.htm Some of there worked already. Please mention which ones were fixed.
Robert Hogan
Comment 11 2012-03-18 04:33:42 PDT
Note You need to log in before you can comment on or make changes to this bug.