CSS 2.1 failure: eof-003.htm fails https://bugs.webkit.org/show_bug.cgi?id=78538

Reviewed by Antti Koivisto.

Source/WebCore:

Tests: css2.1/20110323/eof-001.htm
       css2.1/20110323/eof-003.htm
       css2.1/20110323/eof-004.htm
       css2.1/20110323/eof-005.htm
       css2.1/20110323/eof-006.htm
       css2.1/20110323/eof-007.htm

This patch fixes eof-003.htm, eof-005.htm and eof-006.htm. The other eof-* tests already pass.

* css/CSSGrammar.y: Allow EOF as well as ';' to terminate import rules.
                    This should probably be done for other rules in a separate patch.
* css/CSSParser.cpp:
(WebCore::CSSParser::checkAndSkipString): Allow strings to end with EOF.
(WebCore::CSSParser::parseString): ditto

LayoutTests:

* css2.1/20110323/eof-001-expected.html: Added.
* css2.1/20110323/eof-001.htm: Added.
* css2.1/20110323/eof-003-expected.html: Added.
* css2.1/20110323/eof-003.htm: Added.
* css2.1/20110323/eof-004-expected.html: Added.
* css2.1/20110323/eof-004.htm: Added.
* css2.1/20110323/eof-005-expected.html: Added.
* css2.1/20110323/eof-005.htm: Added.
* css2.1/20110323/eof-006-expected.html: Added.
* css2.1/20110323/eof-006.htm: Added.
* css2.1/20110323/eof-007-expected.html: Added.
* css2.1/20110323/eof-007.htm: Added.
* css2.1/20110323/support/eof-green.css: Added.

Canonical link: https://commits.webkit.org/98677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111132 268f45cc-cd09-0410-ab3c-d52691b4dbfc